--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -12,7 +12,7 @@ $title-color: #fff;
 $subtitle-color: #eb4a4a;
 $circle-color: #eb4a4a;
 $line-color: #eb4a4a;
-// $text-color: gray;
+
 
 $h1-font-size: 84px;
 $h2-font-size: 56px;
@@ -20,3 +20,21 @@ $h3-font-size: 24px;
 $h4-font-size: 22px;
 $h5-font-size: 20px;
 $p-font-size: 18px;
+
+
+
+
+
+
+$bg-col: #020312;
+$bg-item-col: #12141c;
+$first-col: #fff;
+$second-col: #eb4a4a;
+$third-col: gray;
+
+$h1-fs: 84px;
+$h2-fs: 56px;
+$h3-fs: 24px;
+$h4-fs: 22px;
+$h5-fs: 20px;
+$p-fs: 18px;
