--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,9 +19,9 @@ body {
   color: #fff;
 }
 
-section {
-  padding-top: 140px;
-}
+// section {
+//   padding-top: 140px;
+// }
 
 // desktop
 @import "blocks/header/header";
