--- a/src/sass/blocks/services/_services.scss
+++ b/src/sass/blocks/services/_services.scss
@@ -1,4 +1,13 @@
 .services {
+  padding-top: 140px;
+  &__title {
+    @extend %title;
+    text-align: center;
+  }
+  &__subtitle {
+    @extend %subtitle;
+    text-align: center;
+  }
   &__wrapper {
     margin-top: 80px;
     display: grid;
@@ -8,28 +17,27 @@
   }
   &__item {
     padding: 45px;
-    background: $other-color;
-    border-top: 5px solid $other-color;
+    background: $bg-item-col;
+    border-top: 5px solid $bg-item-col;
     border-radius: 8px;
     transition: all 0.40s ease;
-    cursor: pointer;
     &:hover {
       transform: scale(1.01) translateY(-5px);
-      border-top: 5px solid $main-color;
-      h3 {
-        color: $main-color;
+      border-top: 5px solid $second-col;
+      .services__heading {
+        color: $second-col;
       }
     }
   }
   &__heading {
     margin: 15px 0;
-    font-size: 24px;
+    font-size: $h3-fs;
     font-weight: 600;
     transition: all 0.40s ease;
   }
   &__desc {
-    color: $second-color;
-    font-size: $p-font;
+    color: $third-col;
+    font-size: $p-fs;
     line-height: 30px;
   }
 }
